--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li class="one">姓名：靳小川</li>
                 <li class="two">年龄：25</li>
                 <li class="three">手机：18251859801</li>
-                <li class="four">邮箱：1204160989@qq.com</li>
+                <li class="four">邮箱：18251859801@163.com</li>
                 <li class="five">学历：本科</li>
             </ul>
         </div>
@@ -82,10 +82,10 @@
                 <img class="dot" src="img/sec_3.png"/>
                 <img class="dot" src="img/sec_3.png"/>
                 <img class="dot" src="img/sec_3.png"/>
-                <span class="one">UI设计师</span>
-                <span class="two">前端页面设计</span>
-                <span class="three">AJAX</span>
-                <span class="four">JQ</span>
+                <span class="one">熟练使用HTML+CSS,jQuery</span>
+                <span class="two">Ajax数据请求</span>
+                <span class="three">Nodejs,Express框架</span>
+                <span class="four">Angular,Vue</span>
             </div>
         </div>
         <div class="swiper-slide pageFour" trueId="page4">
@@ -147,7 +147,7 @@
                 <span class="con">CONCAT</span>
                 <img src="img/erweima_co.JPG"/>
                 <span class="tel">TEL:18251859801</span>
-                <span class="email">EMAIL:1204160989@QQ.COM</span>
+                <span class="email">EMAIL:18251859801@163.COM</span>
             </div>
         </div>
     </div>
@@ -157,7 +157,7 @@
     <div class="arrow"></div>
 </section>
 <section class="audio">
-    <audio src="audioFile/mm.mp3" loop preload="auto"></audio>
+    <audio src="audioFile/beyond.mp3" loop preload="auto"></audio>
 </section>
 <script charset="utf-8" src="js/swiper.min.js"></script>
 <script charset="utf-8" src="js/resume.js"></script>
